chore: remove unnecessary `javac` arguments